--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Bienvenido a mi Portafolio</title>
 </head>
 <body>
-    <h1>Este es mi portafolio</h1>
+    <h1>Este es mi portafolio Mago x Jocker</h1>
     <p>
-    
+    asdsada
     </p>
+    
 </body>
 </html>
