--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a mi Portafolio</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <h1>Este es mi portafolio Mago x Jocker</h1>
+
+    <div>
     <p>
     asdsada
     </p>
-    
+    </div>
+    <p>
+        dfsdfs      
+    </p>
+
+    <p>
+        ughjhgjhgsad
+    </p>
 </body>
 </html>
