--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a mi Portafolio</title>
     <!--styles css-->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -50,19 +50,77 @@
 
     <!--Portafolio-->
     <section class="container pt-4">
-        <div class="row">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/imgs/Trabajo1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Currriculum Vitae</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                  <a href="#" class="m-2 btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
+        <div class="section-title text-center">
+            <h2 class="fs-1 fw-bold mb-5">Portafolio</h2>
         </div>
+        <div class="row">
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="assets/imgs/Trabajo1.jpg" class="card-img-top mt-2" alt="img.CV">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Currriculum Vitae</h5>
+                    <p class="card-text">Primer desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/01curriculum-vitae/" target="_blank"
+                        class="btn btn-success">HTML CV</a>
+                    <a href="https://github.com/Magoxjocker/01curriculum-vitae.git" target="_blank"
+                        class="btn  btn-success">Ver Codigo</a>
+                </div>
+            </div>
+
+
+            <div class="card m-2 " style="width: 18rem;">
+                <img src="assets/imgs/Trabajo2.jpg" class="card-img-top mt-2" alt="img.Dog´s">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Dog´s</h5>
+                    <p class="card-text">Segundo desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/02-landing-page/" target="_blank"
+                        class="btn btn-success ">Dog´s</a>
+                    <a href="https://github.com/Magoxjocker/02-landing-page.git" target="_blank"
+                        class="btn btn-success ">Ver Codigo</a>
+                </div>
+            </div>
+
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="assets/imgs/Trabajo3.jpg" class="card-img-top mt-2" alt="img-Camaleon">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Camaleon Page</h5>
+                    <p class="card-text">Tercer desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/02-landing-page/" target="_blank"
+                        class="btn btn-success m-lg-1 ">Camaleon</a>
+                    <a href="https://github.com/Magoxjocker/02-landing-page.git" target="_blank"
+                        class="btn btn-success m-1 ">Ver Codigo</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="assets/imgs/Trabajo4.jpg" class="card-img-top mt-2" alt="img-Cupones">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Cupones Page</h5>
+                    <p class="card-text">Cuarto desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/04-boostrap/" target="_blank"
+                        class="btn btn-success m-lg-1 ">Cupones</a>
+                    <a href="https://github.com/Magoxjocker/04-boostrap.git" target="_blank"
+                        class="btn btn-success m-1 ">Ver Codigo</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="assets/imgs/Trabajo5.jpg" class="card-img-top mt-2" alt="img-Luffy">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Luffy Page</h5>
+                    <p class="card-text">Quinto desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/05-Git-hub/" target="_blank"
+                        class="btn btn-success m-lg-1 ">Monkey D.</a>
+                    <a href="https://github.com/Magoxjocker/05-Git-hub.git" target="_blank"
+                        class="btn btn-success m-1 ">Ver Codigo</a>
+                </div>
+            </div>
+
+        </div>
+
     </section>
- 
+
 
 
 
