se modifican rutuas de tercera carta

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Camaleon Page</h5>
                     <p class="card-text">Tercer desafio bootcamp Desafio Latam</p>
-                    <a href="https://magoxjocker.github.io/02-landing-page/" target="_blank"
+                    <a href="https://magoxjocker.github.io/03-ejercicios-posicionamiento/" target="_blank"
                         class="btn btn-success m-lg-1 ">Camaleon</a>
-                    <a href="https://github.com/Magoxjocker/02-landing-page.git" target="_blank"
+                    <a href="https://github.com/Magoxjocker/03-ejercicios-posicionamiento.git" target="_blank"
                         class="btn btn-success m-1 ">Ver Codigo</a>
                 </div>
             </div>
