--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     </nav>
 
     <!--Portafolio-->
-    <section class="container pt-4">
+    <section class="container pt-4 ">
         <div class="section-title text-center">
             <h2 class="fs-1 fw-bold mb-5">Portafolio</h2>
         </div>
-        <div class="row">
+        <div class="row bg-color">
 
             <div class="card m-2" style="width: 18rem;">
                 <img src="assets/imgs/Trabajo1.jpg" class="card-img-top mt-2" alt="img.CV">
@@ -119,9 +119,12 @@
 
         </div>
 
+        <div>
         <footer>
-            <p>asdasdqwe</p>
+            <p>MagoxJocker</p>
         </footer>
+        </div>
+
     </section>
 
 
