se realizan cambios a seccion portafolio

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
     </nav>
 
     <!--Portafolio-->
-    <section class="container pt-4 ">
+    <section class="container-fluid">
         <div class="section-title text-center">
             <h2 class="fs-1 fw-bold mb-5">Portafolio</h2>
         </div>
-        <div class="row bg-color">
+
+        <div class="container-fluid row bg-color w-auto d-flex justify-content-center">
 
             <div class="card m-2" style="width: 18rem;">
                 <img src="assets/imgs/Trabajo1.jpg" class="card-img-top mt-2" alt="img.CV">
@@ -68,7 +69,7 @@
             </div>
 
 
-            <div class="card m-2 " style="width: 18rem;">
+            <div class="card m-2" style="width: 18rem;">
                 <img src="assets/imgs/Trabajo2.jpg" class="card-img-top mt-2" alt="img.Dog´s">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Dog´s</h5>
@@ -111,8 +112,20 @@
                     <h5 class="card-title text-center">Luffy Page</h5>
                     <p class="card-text">Quinto desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/05-Git-hub/" target="_blank"
-                        class="btn btn-success m-lg-1 ">Monkey D.</a>
+                        class="btn btn-success m-lg-1 ">Luffy</a>
                     <a href="https://github.com/Magoxjocker/05-Git-hub.git" target="_blank"
+                        class="btn btn-success m-1 ">Ver Codigo</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="assets/imgs/Trabajo6.jpg" class="card-img-top mt-2" alt="img-Portafolio">
+                <div class="card-body card-color mb-2">
+                    <h5 class="card-title text-center">Portafolio</h5>
+                    <p class="card-text">Sexto desafio bootcamp Desafio Latam</p>
+                    <a href="https://magoxjocker.github.io/" target="_blank"
+                        class="btn btn-success m-lg-1 ">Portafolio</a>
+                    <a href="https://github.com/Magoxjocker/Magoxjocker.github.io.git" target="_blank"
                         class="btn btn-success m-1 ">Ver Codigo</a>
                 </div>
             </div>
