--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div>
         <footer>
-            <p>MagoxJocker</p>
+            <p>MagoxJocker´s</p>
         </footer>
         </div>
 
