se agrega ruta i

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">MagoXJocker</a>
+            <a class="navbar-brand" href="https://magoxjocker.github.io/">MagoXJocker</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#">Portafolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Contacto</a>
+                        <a class="nav-link"  href="#">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -51,7 +51,7 @@
     <!--Portafolio-->
     <section class="container-fluid">
         <div class="section-title text-center">
-            <h2 class="fs-1 fw-bold mb-5">Portafolio</h2>
+            <h2 class="fs-1 fw-bold mb-4 pt-4">Portafolio</h2>
         </div>
 
         <div class="container-fluid row bg-color w-auto d-flex justify-content-center">
