se cambian colores

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--NAVBAR-->
-    <nav class="navbar  navbar-expand-lg navbar-dark bg-color ">
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-color-nav ">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,12 +133,12 @@
         </div>
 
         <div>
-        <footer>
-            <p>MagoxJocker´s</p>
-        </footer>
-        </div>
-
     </section>
+
+    <footer>
+        <p>MagoxJocker´s</p>
+    </footer>
+    </div>
 
     <!--bootstrap JV-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
