se agrega formulario de contacto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#">Portafolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#">Contacto</a>
+                        <a class="nav-link" href="#">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -133,6 +133,49 @@
         </div>
 
         <div>
+    </section>
+
+    <section class="container-fluid row w-auto ">
+        <div class="container ">
+            <div class="m-2">
+                <div class="section-title text-center">
+                    <h2 class="fs-1 fw-bold ">Contacto</h2>
+                </div>
+            </div>
+            <div class="container-fluid row col-md-7 text-center bg-color-nav w-auto">
+                <div class="contact-form mt-4">
+                    <form>
+                        <div class="row mt-4 mt-md-0">
+                            <div class="col-lg-6 mb-4">
+                                <input type="text" placeholder="Nombre"
+                                    class="form-control form-control-lg fs-6 border-0 shadow-sm">
+                            </div>
+                            <div class="col-lg-6 mb-4">
+                                <input type="text" placeholder="Email"
+                                    class="form-control form-control-lg fs-6 border-0 shadow-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <input type="text" placeholder="Asunto"
+                                    class="form-control form-control-lg fs-6 border-0 shadow-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <textarea rows="5" type="text" placeholder="Mensaje"
+                                    class="form-control form-control-lg fs-6 border-0 shadow-sm"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 mb-4">
+                                <button type="submit" class="btn btn-light text-dark fw-bold">Enviar Mensaje</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
