--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--NAVBAR-->
-    <nav class="navbar  navbar-expand-lg navbar-dark bg-color-nav">
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-color-nav fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portafolio</a>
+                        <a class="nav-link" href="#portafolio">Portafolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -48,13 +48,42 @@
         </div>
     </nav>
 
+    <!--HOME-->
+    <section class="bg-color" id="inicio">
+        <div class="row container mx-auto">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/imgs/carrusel 1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/imgs/carrusel 2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/imgs/carrusel 3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+
     <!--Portafolio-->
-    <section class="container-fluid">
-        <div class="section-title text-center">
-            <h2 class="fs-1 fw-bold mb-4 pt-4">Portafolio</h2>
+    <section id="portafolio">
+        <div class="container-lg section-title text-center ">
+            <h2 class="fs-1 fw-bold mb-4  pt-4">Portafolio</h2>
         </div>
 
-        <div class="container-fluid row bg-color w-auto d-flex justify-content-center">
+        <div class="container-fluid row bg-color w-auto d-flex justify-content-center p-4">
 
             <div class="card m-2" style="width: 18rem;">
                 <img src="assets/imgs/Trabajo1.jpg" class="card-img-top mt-2" alt="img.CV">
@@ -129,14 +158,12 @@
                         class="btn btn-success m-1 ">Ver Codigo</a>
                 </div>
             </div>
-
         </div>
 
-        <div>
     </section>
-
-    <section class="container-fluid row w-auto ">
-        <div class="container ">
+    <!--contacto-->
+    <section id="contacto" class="row w-auto bg-color-nav">
+        <div class="container-lg section-title text-center">
             <div class="m-2">
                 <div class="section-title text-center">
                     <h2 class="fs-1 fw-bold ">Contacto</h2>
@@ -145,7 +172,7 @@
             <div class="container-fluid row col-md-7 text-center bg-color-nav w-auto">
                 <div class="contact-form mt-4">
                     <form>
-                        <div class="row mt-4 mt-md-0">
+                        <div class="row mt-4 mt-md-0 ">
                             <div class="col-lg-6 mb-4">
                                 <input type="text" placeholder="Nombre"
                                     class="form-control form-control-lg fs-6 border-0 shadow-sm">
