--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a mi Portafolio</title>
     <!--styles css-->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -34,6 +34,9 @@
                         <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#galeria">Galeria</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#portafolio">Portafolio</a>
                     </li>
                     <li class="nav-item">
@@ -42,25 +45,52 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="#contacto">Search</button>
                 </form>
             </div>
         </div>
     </nav>
+    <!--Home-->
+    <section id="inicio">
+        <div class="mt-4 pt-5 bg-color-nav mx-auto container-fluid text-center">
+            <div class="home-text pb-2">
+                <h1 class="text-light mt-2 text-uppercase text-center fs-1 fw-bold">Desarrolador Web</h1>
+                <h2 class="fs-4 text-light text-center ">Magoxjocker</h2>
+                <p class="mt-4 text-light text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam
+                    velit exercitationem modi et quisquam illo, tenetur quia, eos quod voluptatibus nihil reprehenderit
+                    perferendis aperiam facilis laboriosam obcaecati minima, temporibus earum! Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Aut autem itaque maiores necessitatibus corporis, quidem
+                    cupiditate fugit est nemo, harum quasi impedit officiis corrupti ducimus ab optio eaque reiciendis
+                    placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus veniam
+                    aliquid similique! Ipsa, deserunt corrupti ullam adipisci molestiae autem quo dicta veritatis, eius
+                    sint eum magni enim. Sed, fuga.</p>
 
-    <!--HOME-->
-    <section class="bg-color" id="inicio">
-        <div class="row container mx-auto">
+                <a href="https://magoxjocker.github.io/01curriculum-vitae/" target="_blank"
+                    class="btn btn-success">Currriculum</a>
+
+            </div>
+        </div>
+    </section>
+    <!--carousel-->
+    <section id="galeria">
+        <div class="container-fluid section-title text-center ">
+            <h2 class="fs-1 fw-bold mb-4  pt-5">Cuadros Realizados</h2>
+        </div>
+
+        <div class="row container-fluid mx-auto bg-color">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner m-4">
                     <div class="carousel-item active">
-                        <img src="assets/imgs/carrusel 1.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/imgs/carousel1.jpg" class="d-block md mx-auto" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carrusel 2.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/imgs/carousel2.jpg" class="d-block md mx-auto" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carrusel 3.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/imgs/carousel3.jpg" class="d-block md mx-auto" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/imgs/carousel4.jpg" class="d-block md mx-auto" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -80,7 +110,7 @@
     <!--Portafolio-->
     <section id="portafolio">
         <div class="container-lg section-title text-center ">
-            <h2 class="fs-1 fw-bold mb-4  pt-4">Portafolio</h2>
+            <h2 class="fs-1 fw-bold mb-4  pt-5">Portafolio</h2>
         </div>
 
         <div class="container-fluid row bg-color w-auto d-flex justify-content-center p-4">
@@ -89,7 +119,7 @@
                 <img src="assets/imgs/Trabajo1.jpg" class="card-img-top mt-2" alt="img.CV">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Currriculum Vitae</h5>
-                    <p class="card-text">Primer desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Primer desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/01curriculum-vitae/" target="_blank"
                         class="btn btn-success">HTML CV</a>
                     <a href="https://github.com/Magoxjocker/01curriculum-vitae.git" target="_blank"
@@ -102,7 +132,7 @@
                 <img src="assets/imgs/Trabajo2.jpg" class="card-img-top mt-2" alt="img.Dog´s">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Dog´s</h5>
-                    <p class="card-text">Segundo desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Segundo desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/02-landing-page/" target="_blank"
                         class="btn btn-success ">Dog´s</a>
                     <a href="https://github.com/Magoxjocker/02-landing-page.git" target="_blank"
@@ -115,7 +145,7 @@
                 <img src="assets/imgs/Trabajo3.jpg" class="card-img-top mt-2" alt="img-Camaleon">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Camaleon Page</h5>
-                    <p class="card-text">Tercer desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Tercer desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/03-ejercicios-posicionamiento/" target="_blank"
                         class="btn btn-success m-lg-1 ">Camaleon</a>
                     <a href="https://github.com/Magoxjocker/03-ejercicios-posicionamiento.git" target="_blank"
@@ -127,7 +157,7 @@
                 <img src="assets/imgs/Trabajo4.jpg" class="card-img-top mt-2" alt="img-Cupones">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Cupones Page</h5>
-                    <p class="card-text">Cuarto desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Cuarto desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/04-boostrap/" target="_blank"
                         class="btn btn-success m-lg-1 ">Cupones</a>
                     <a href="https://github.com/Magoxjocker/04-boostrap.git" target="_blank"
@@ -139,7 +169,7 @@
                 <img src="assets/imgs/Trabajo5.jpg" class="card-img-top mt-2" alt="img-Luffy">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Luffy Page</h5>
-                    <p class="card-text">Quinto desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Quinto desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/05-Git-hub/" target="_blank"
                         class="btn btn-success m-lg-1 ">Luffy</a>
                     <a href="https://github.com/Magoxjocker/05-Git-hub.git" target="_blank"
@@ -151,22 +181,25 @@
                 <img src="assets/imgs/Trabajo6.jpg" class="card-img-top mt-2" alt="img-Portafolio">
                 <div class="card-body card-color mb-2">
                     <h5 class="card-title text-center">Portafolio</h5>
-                    <p class="card-text">Sexto desafio bootcamp Desafio Latam</p>
+                    <p class="card-text text-center">Sexto desafio bootcamp Desafio Latam</p>
                     <a href="https://magoxjocker.github.io/" target="_blank"
                         class="btn btn-success m-lg-1 ">Portafolio</a>
                     <a href="https://github.com/Magoxjocker/Magoxjocker.github.io.git" target="_blank"
                         class="btn btn-success m-1 ">Ver Codigo</a>
                 </div>
             </div>
+
         </div>
 
+        <div>
     </section>
-    <!--contacto-->
-    <section id="contacto" class="row w-auto bg-color-nav">
+
+    <!--Contacto-->
+    <section id="contacto" class="row w-auto">
         <div class="container-lg section-title text-center">
             <div class="m-2">
                 <div class="section-title text-center">
-                    <h2 class="fs-1 fw-bold ">Contacto</h2>
+                    <h2 class="fs-1 fw-bold pt-5">Contacto</h2>
                 </div>
             </div>
             <div class="container-fluid row col-md-7 text-center bg-color-nav w-auto">
@@ -204,12 +237,35 @@
             </div>
         </div>
     </section>
+    <!--footer-->
+    <footer class="container">
+        <p class="fs-4 text-center text-succes fw-bold">MagoxJocker ©</p>
 
-    <footer>
-        <p>MagoxJocker´s</p>
+        <div class="row text-center">
+            <div class="col-12 col-md-4">
+                <i class="fa-regular fa-envelope fa-3x my-2"></i>
+                <h3 class="my-2 fw-bold">Correo</h3>
+                <p class="my-3">
+                juan.tapia.d@live.com
+                </p>
+            </div>
+            <div class="col-12 col-md-4">
+                <i class="fa-solid fa-map-location-dot fa-2x my-2"></i>
+                <h3 class="my-2 fw-bold">Direccion</h3>
+                <p class="my-3">
+                    La Guitarra, #10951 La Pintana.
+                </p>
+            </div>
+            <div class="col-12 col-md-4">
+                <i class="fa-solid fa-mobile-retro fa-2x my-2"></i>
+                <h3 class="my-2 fw-bold">Celular</h3>
+                <p class="my-3">
+                +569 85 88 48 88
+                </p>
+            </div>
+        </div>
     </footer>
-    </div>
-
+    
     <!--bootstrap JV-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
