--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner m-4">
                     <div class="carousel-item active">
-                        <img src="assets/imgs/carousel1.jpg" class="d-block md mx-auto" alt="...">
+                        <img src="assets/imgs/carousel1.jpg" class="d-block md mx-auto" alt="carousel1">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel2.jpg" class="d-block md mx-auto" alt="...">
+                        <img src="assets/imgs/carousel2.jpg" class="d-block md mx-auto" alt="carousel2">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel3.jpg" class="d-block md mx-auto" alt="...">
+                        <img src="assets/imgs/carousel3.jpg" class="d-block md mx-auto" alt="carousel3">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel4.jpg" class="d-block md mx-auto" alt="...">
+                        <img src="assets/imgs/carousel4.jpg" class="d-block md mx-auto" alt="carousel4">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
