--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         </div>
     </nav>
     <!--Home-->
-    <section id="inicio">
-        <div class="mt-4 pt-5 bg-color-nav mx-auto container-fluid text-center">
+    <section class="inicio" id="inicio">
+        <div class="mt-4 pt-5 mx-auto container-fluid text-left">
             <div class="home-text pb-2">
-                <h1 class="text-light mt-2 text-uppercase text-center fs-1 fw-bold">Desarrolador Web</h1>
-                <h2 class="fs-4 text-light text-center ">Magoxjocker</h2>
-                <p class="mt-4 text-light text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam
+                <h1 class="text-uppercase text-left fw-bold">Desarrolador Web</h1>
+                <h2 class="text-left ">Magoxjocker</h2>
+                <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam
                     velit exercitationem modi et quisquam illo, tenetur quia, eos quod voluptatibus nihil reprehenderit
                     perferendis aperiam facilis laboriosam obcaecati minima, temporibus earum! Lorem, ipsum dolor sit
                     amet consectetur adipisicing elit. Aut autem itaque maiores necessitatibus corporis, quidem
@@ -79,18 +79,18 @@
 
         <div class="row container-fluid mx-auto bg-color">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner m-4">
+                <div class="carousel-inner m-1">
                     <div class="carousel-item active">
-                        <img src="assets/imgs/carousel1.jpg" class="d-block md mx-auto" alt="carousel1">
+                        <img src="assets/imgs/carousel1.jpg" class="d-block mx-auto" alt="carousel1">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel2.jpg" class="d-block md mx-auto" alt="carousel2">
+                        <img src="assets/imgs/carousel2.jpg" class="d-block mx-auto" alt="carousel2">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel3.jpg" class="d-block md mx-auto" alt="carousel3">
+                        <img src="assets/imgs/carousel3.jpg" class="d-block mx-auto" alt="carousel3">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/carousel4.jpg" class="d-block md mx-auto" alt="carousel4">
+                        <img src="assets/imgs/carousel4.jpg" class="d-block mx-auto" alt="carousel4">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -105,6 +105,7 @@
                 </button>
             </div>
         </div>
+        
     </section>
 
     <!--Portafolio-->
